# BICI_ROS_sensor_reader

./: CMakeLists.txt  README.md  package.xml
msg/: TactileData.msg
scripts/: sensor_vis.py
src/: sensor_parser.cpp  sensor_parser.h
