<?xml version="1.0"?>
<package>
  <name>bici_ros_sensor_reader</name>
  <version>0.0.0</version>
  <description>Publishing the sensor data from a serial USB port to a ROS topic</description>

  <author email="al.mrad.abed@gmail.com">Abed Al Rahman Al Mrad</author>

  <maintainer email="al.mrad.abed@gmail.com">Abed Al Rahman Al Mrad</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
